fix: Better overflow and margins

--- a/src/frontend/floatingLabel/FloatingLabel.css
+++ b/src/frontend/floatingLabel/FloatingLabel.css
@@ -8,7 +8,6 @@
 }
 
 .floating-label label {
-	padding-left: 2.5%;
 	font-size: 1rem;
 	color: #495057;
 	pointer-events: none;
