--- a/src/frontend/nav/nav.css
+++ b/src/frontend/nav/nav.css
@@ -26,3 +26,10 @@
 	display: flex;
 	flex-direction: row;
 }
+
+#nav-wrapper{
+	max-height: 100vh;
+	overflow-y: auto;
+	max-width: 100vw;
+	overflow-x: hidden;
+}
